# aula09_bootcamp_python

./: README.md  etl.py  exemplo00.py  pipeline.py  pyproject.toml  schema.py  utils_log.py
data/: vendas_consolidadas_2025-01-20_18-26-09.csv
