[tool.poetry]
name = "aula09-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Ricardo Marques <dataricardom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
